--- a/Security/Guidelines/Jenkins.mediawiki
+++ b/Security/Guidelines/Jenkins.mediawiki
@@ -172,6 +172,8 @@ From time to time, a new job will supersede an old job as you make improvements 
 * Legacy environment/parameter retention that include sensitive information (that newer jobs may be protected against)
 * Older jobs may have depended on secrets that you no longer need to store locally in your Jenkins installation (perhaps you abstracted them away from Jenkins for security reasons)
 
+There have also been observed occurrences where disabled jobs are not provided the same level of security protections as active jobs.  One specific example was with password masking, which was not applied to disabled jobs in older Jenkins instance runs even after an instance upgrade.
+
 === Job/Security Scope Creep ===
 As Jenkins instances age, it's relatively common that they take on more and more responsibilities.  It's no uncommon that a Jenkins system is setup for testing purposes and the result of the successful test, it becomes a production system.  It's important to be mindful of this to be on the look out for Jenkins instances that started out very low-risk to the business and eventually evolved into the primary build pipeline.  It's important to maintain and inventory of your Jenkins installations and try to confine each instance to a specific group of tasks or project and do regular check-ups for "one offs".
 
