Add JNLP and CLI security

--- a/Security/Guidelines/Jenkins.mediawiki
+++ b/Security/Guidelines/Jenkins.mediawiki
@@ -108,6 +108,13 @@ If you are using GitHub authentication, it also supports an alternative authoriz
 === CSRF Protection ===
 Jenkins does provide a CSRF configuration with in Manage Jenkins => Configure Global Security as a checkbox called "Prevent Cross Site Request Forgery exploits".  Unfortunately, this feature, which is aimed at preventing an attacker from executing CSRF/XSRF exploit, also comes with some short falls including additional work to use the remote api and limited testing/compatibility support with plugins.  It is recommended that this feature be enabled at first, but if it becomes an obstacle and conflicts with one of the above issues, then it can be disabled.
 
+=== JNLP Slave Agents ===
+Jenkins is by default enabled with JNLP slave agent support on port 50000.  This allows slave agents to communicate back to the master Jenkins node.  If you are using JNLP slave agents, disable this feature, which is configurable via http://192.168.99.100:8080/configureSecurity/ when the "Enable security" box is checked.
+
+=== Jenkins CLI ===
+Jenkins supports a [https://wiki.jenkins-ci.org/display/JENKINS/Jenkins+CLI CLI functionality], which allows you to perform a number of administrative actions on Jenkins via the Jenkins CLI client.  It is highly recommended that this service be disabled if it is not being used because at certain versions of Jenkins it allows unauthenticated remote code execution (aka: administrative control) on the Jenkins instance.
+
+
 == SSH ==
 
 === Authentication ===
