--- a/Security/Standard_Levels.mediawiki
+++ b/Security/Standard_Levels.mediawiki
@@ -1,8 +1,37 @@
+<!-- Levels colors reference for copy pasting -->
+<!--
+Levels
+<span style="background-color: #ffffff; border-radius: .25em; color: #000000; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">UNKNOWN</span>
+<span style="background-color: #cccccc; border-radius: .25em; color: #000000; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">LOW</span>
+<span style="background-color: #4a6785; border-radius: .25em; color: #ffffff; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">MEDIUM</span>
+<span style="background-color: #ffd351; border-radius: .25em; color: #000000; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">HIGH</span>
+<span style="background-color: #d04437; border-radius: .25em; color: #ffffff; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">MAXIMUM</span>
+
+Pass/Fail
+<span style="background-color: #14892c; border-radius: .25em; color: #ffffff; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">PASS</span>
+<span style="background-color: #d04437; border-radius: .25em; color: #ffffff; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">FAIL</span>
+
+Document status
+<span style="background-color: #14892c; border-radius: .25em; color: #ffffff; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">READY</span>
+<span style="background-color: #ffd351; border-radius: .25em; color: #000000; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">DRAFT</span>
+<span style="background-color: #d04437; border-radius: .25em; color: #ffffff; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">NOT READY</span>
+
+Star rating
+<span style="background-color: #14892c; border-radius: .25em; color: #000000; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">✯✯✯✯</span>
+<span style="background-color: #4a6785; border-radius: .25em; color: #000000; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">✯✯✯</span>
+<span style="background-color: #ffd351; border-radius: .25em; color: #000000; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">✯✯</span>
+<span style="background-color: #d04437; border-radius: .25em; color: #000000; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">✯</span>
+
+Optional, Should, Must
+<span style="background-color: #cccccc; border-radius: .25em; color: #000000; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">OPTIONAL</span>
+<span style="background-color: #ffd351; border-radius: .25em; color: #000000; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">SHOULD</span>
+<span style="background-color: #d04437; border-radius: .25em; color: #ffffff; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">MUST</span>
+ -->
 <table>
   <tr>
     <td style="min-width: 25em;">__TOC__</td>
     <td style="vertical-align: top; padding-left: 1em;">
-'''STATUS: <span style="padding: 0 32px;background-color:green;">READY</span>'''
+'''STATUS: <span style="background-color: #14892c; border-radius: .25em; color: #ffffff; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">READY</span>'''
 
 The goal of this document is to ensure consistency, coherence between security documents. All Mozilla
 security documentation must follow the recommendations below.
@@ -71,7 +100,7 @@ Accepted risk
 ! Coding rationale
 ! Definition & expectations
 |-
-! <span style="padding: 0 32px;background-color:lightgrey;">UNKNOWN</span>
+! <span style="background-color: #ffffff; border-radius: .25em; color: #000000; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">UNKNOWN</span>
 | White represent the emptiness/lack of data.
 | This is '''not a real level''', it is used when there to represent that we do not have enough data to correctly assess risk (i.e. data collection work is required).
 Even when no data is present, it is often possible to estimate the risk (since there is a risk of ''not knowing'').
@@ -80,7 +109,7 @@ However, communicating the risk of not knowing is challenging and prone to failu
 
 This concept is also known as ''"trust, but verify"'' - i.e. unknown does not dist-trust (by assign it a higher risk) the service, user, etc. by default.
 |-
-! <span style="padding: 0 32px;background-color:lightgrey;">LOW</span>
+! <span style="background-color: #cccccc; border-radius: .25em; color: #000000; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">LOW</span>
 |
 * Gray is a low contrast color, which signifies important. It's also less catchy.
 * Green is not used as green means "ok to do", which is not a level.
@@ -92,7 +121,7 @@ This concept is also known as ''"trust, but verify"'' - i.e. unknown does not di
 * '''Risk acceptance''': Risk may often be accepted as residual risk.
 * '''Exception time''': Indefinitely.
 |-
-! <span style="padding: 0 32px;background-color:steelblue;">MEDIUM</span>
+! <span style="background-color: #4a6785; border-radius: .25em; color: #ffffff; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">MEDIUM</span>
 |
 * Blue is calm and neutral.
 |
@@ -102,7 +131,7 @@ This concept is also known as ''"trust, but verify"'' - i.e. unknown does not di
 * '''Risk acceptance''': Risk should generally be discussed, and at least mitigated.
 * '''Exception time''': Recommend remediation within 90-180 days.
 |-
-! <span style="padding: 0 32px;background-color:#FFF380;">HIGH</span>
+! <span style="background-color: #ffd351; border-radius: .25em; color: #000000; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">HIGH</span>
 |
 * Yellow generally signifies "warning". In our case it correlates to "important".
 |
@@ -112,7 +141,7 @@ This concept is also known as ''"trust, but verify"'' - i.e. unknown does not di
 * '''Risk acceptance''': Risk must  be discussed, and should at least be mitigated.
 * '''Exception time''': Recommend remediation within 30-90 days.
 |-
-! <span style="padding: 0 32px;background-color:#E77471;">MAXIMUM</span>
+! <span style="background-color: #d04437; border-radius: .25em; color: #ffffff; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">MAXIMUM</span>
 |
 * Red signifies "most important".
 * Maximum is a level. Critical is not.
@@ -134,28 +163,28 @@ When work is required for a remediation, mitigation, additional security control
 ! Level
 ! Time spent
 |-
-! <span style="padding: 0 32px;background-color:lightgrey;">LOW</span>
+! <span style="background-color: #cccccc; border-radius: .25em; color: #000000; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">LOW</span>
 |
 * Small group: Few hours.
 * Large group: Few minutes.
 
 Example: Flip a configuration switch, change a password, lookup a document, etc.
 |-
-! <span style="padding: 0 32px;background-color:steelblue;">MEDIUM</span>
+! <span style="background-color: #4a6785; border-radius: .25em; color: #ffffff; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">MEDIUM</span>
 |
 * Small group: A few days.
 * Large group: A few hours.
 
 Example: Take a group decision, create standards, lookup complex data, manual upgrades, etc.
 |-
-! <span style="padding: 0 32px;background-color:#FFF380;">HIGH</span>
+! <span style="background-color: #ffd351; border-radius: .25em; color: #000000; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">HIGH</span>
 |
 * Small group: A week or two.
 * Large group: A day or two.
 
 Example: Implement a new security control, code a new feature, change all company user passwords, etc.
 |-
-! <span style="padding: 0 32px;background-color:#E77471;">MAXIMUM</span>
+! <span style="background-color: #d04437; border-radius: .25em; color: #ffffff; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">MAXIMUM</span>
 |
 * Small group: Weeks, quarterly goals.
 * Large group: Weeks, quarterly goals.
@@ -174,19 +203,19 @@ See also [https://www.ietf.org/rfc/rfc2119.txt RFC 2119] for a formal definition
 ! Definition & expectations
 |-
 |-
-! <span style="padding: 0 32px;background-color:lightgrey;">OPTIONAL</span>
+! <span style="background-color: #cccccc; border-radius: .25em; color: #000000; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">OPTIONAL</span>
 |
 * See risk level's [[#Risk levels definition and nomenclature | "low"]] rationale.
 |
 * This is up to the reader to choose to follow or not to follow this recommendation.
 |-
-! <span style="padding: 0 32px;background-color:#FFF380;">SHOULD</span>
+! <span style="background-color: #ffd351; border-radius: .25em; color: #000000; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">SHOULD</span>
 |
 * See risk level's [[#Risk levels definition and nomenclature | "high"]] rationale.
 |
 * Should is very close to "must do" - however, exceptions may be granted after discussion.
 |-
-! <span style="padding: 0 32px;background-color:#E77471;">MUST</span>
+! <span style="background-color: #d04437; border-radius: .25em; color: #ffffff; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">MUST</span>
 |
 * See risk level's [[#Risk levels definition and nomenclature | "maximum"]] rationale.
 |
@@ -203,14 +232,14 @@ Tests are not levels per se. When possible, they either pass or fail. It's simil
 ! Coding rationale
 ! Definition & expectations
 |-
-! <span style="padding: 0 32px;background-color:green;">PASS</span>
+! <span style="background-color: #14892c; border-radius: .25em; color: #ffffff; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">PASS</span>
 |
 * Green generally means acceptance, allowance such as the traffic sign "Walk".
 |
 * Means a test successfully passed.
 * There is no "almost passed": test must completely pass.
 |-
-! <span style="padding: 0 32px;background-color:#E77471;">FAIL</span>
+! <span style="background-color: #d04437; border-radius: .25em; color: #ffffff; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">FAIL</span>
 |
 * Red generally means refusal, denial, such as the traffic sign "Don't walk".
 |
@@ -226,16 +255,16 @@ These are used in the header of every document to clearly signify its current st
 ! Level
 ! Definition & expectations
 |-
-! <span style="padding: 0 32px;background-color:green;">READY</span>
+! <span style="background-color: #14892c; border-radius: .25em; color: #ffffff; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">READY</span>
 |
 * Means the document is ready for user consumption and is expected to be followed.
 |-
-! <span style="padding: 0 32px;background-color:#FFF380;">HIGH</span>
+! <span style="background-color: #ffd351; border-radius: .25em; color: #000000; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">DRAFT</span>
 |
 * Means the document is in progress or does not cover all cases.
 * You may follow this document for guidance, at your own risk.
 |-
-! <span style="padding: 0 32px;background-color:#E77471;">NOT READY</span>
+! <span style="background-color: #d04437; border-radius: .25em; color: #ffffff; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">NOT READY</span>
 |
 * Means the document should not be followed right now.
 |-
@@ -251,20 +280,21 @@ Four levels are used to align with other security related levels, such as risk l
 ! Level
 ! Definition & expectations
 |-
-! <span style="padding: 0 32px;background-color:green;">✯✯✯✯</span> (4)
+
+! <span style="background-color: #14892c; border-radius: .25em; color: #000000; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">✯✯✯✯</span>
 |
 ''Highest possible grade.''
 
 * All intentions of objective met.
 * Attention expected but not required.
 |-
-! <span style="padding: 0 32px;background-color:steelblue;">✯✯✯</span> (3)
+! <span style="background-color: #4a6785; border-radius: .25em; color: #000000; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">✯✯✯</span>
 |
 * Most intentions of objective met.
 * Some outliers require attention.
 * Immediate action not required.
 |-
-! <span style="padding: 0 32px;background-color:#FFF380;">✯✯✯</span> (2)
+! <span style="background-color: #ffd351; border-radius: .25em; color: #000000; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">✯✯</span>
 |
 ''Score may moderately contribute to risk.''
 
@@ -272,7 +302,7 @@ Four levels are used to align with other security related levels, such as risk l
 * Attention and timely action are required
 * Potential blocker on initiative
 |-
-! <span style="padding: 0 32px;background-color:#E77471;">✯</span> (1)
+! <span style="background-color: #d04437; border-radius: .25em; color: #000000; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">✯</span>
 |
 ''Lowest possible grade, score may greatly contribute to risk.''
 
@@ -292,29 +322,29 @@ This should be used for Mozilla provided or hosted services as well as externall
 ! Security level provided (impacts mentioned are from [[Security/Risk management/Rapid Risk Assessment|Rapid Risk Assessment]]
 ! Definition & expectations
 |-
-! <span style="padding: 0 32px;background-color:lightgrey;">LOW</span>
-| 
+! <span style="background-color: #cccccc; border-radius: .25em; color: #000000; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">LOW</span>
+|
 * This service provides very little security controls and/or practices - it is known as carrying more risk.
 * Is not expected to provide effective security controls.
-* May only be used by <span style="padding: 0 32px;background-color:lightgrey;">LOW</span> risk impact services.
+* May only be used by  <span style="background-color: #cccccc; border-radius: .25em; color: #000000; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">LOW</span> risk impact services.
 |-
-! <span style="padding: 0 32px;background-color:steelblue;">MEDIUM</span>
+! <span style="background-color: #4a6785; border-radius: .25em; color: #ffffff; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">MEDIUM</span>
 |
 * This service uses best practices security-wise. Follows all standards and guidelines.
-* May be used with most services that do not require specific security controls, or <span style="padding: 0 32px;background-color:steelblue;">MEDIUM</span> (or lower) risk impact services.
+* May be used with most services that do not require specific security controls, or <span style="background-color: #4a6785; border-radius: .25em; color: #ffffff; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">MEDIUM</span> (or lower) risk impact services.
 |-
-! <span style="padding: 0 32px;background-color:#FFF380;">HIGH</span>
+! <span style="background-color: #ffd351; border-radius: .25em; color: #000000; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">HIGH</span>
 |
-* In addition to the <span style="padding: 0 32px;background-color:steelblue;">MEDIUM</span> level, this service provides:
+* In addition to the <span style="background-color: #4a6785; border-radius: .25em; color: #ffffff; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">MEDIUM</span> level, this service provides:
 ** Multiple security layers across the board.
 ** Has dedicated security contacts/teams.
 ** Gets tested regularly and has a good track record.
-* May be used for services with <span style="padding: 0 32px;background-color:#FFF380;">HIGH</span> (or lower) risk impact.
+* May be used for services with <span style="background-color: #ffd351; border-radius: .25em; color: #000000; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">HIGH</span> (or lower) risk impact.
 |-
-! <span style="padding: 0 32px;background-color:#E77471;">MAXIMUM</span>
+! <span style="background-color: #d04437; border-radius: .25em; color: #ffffff; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">MAXIMUM</span>
 |
 * In addition to the high level, this service does exceptionally well in the security space and is well-known for properly implementing the best controls, processes, etc.
 * Advanced tools are used to ensure strong and granular data separation (such as system-level RBAC).
-* May be used to support any other service, including <span style="padding: 0 32px;background-color:#E77471;">MAXIMUM</span> risk impact services.
+* May be used to support any other service, including <span style="background-color: #d04437; border-radius: .25em; color: #ffffff; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">MAXIMUM</span> risk impact services.
 |-
 |}
